--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,9 +26,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <div class="page-header pt-4 pb-5">
     <div class="container-lg">
+      <div class="text-center">
+        <a href="{{ "/" | relative_url}}"><img class="logo" src="{{ "/assets/img/seconde_nature_logo.png" | relative_url}}" width="200" 
+          alt="Seconde Nature"></a>
+      </div>
       <div>
         <ul>
-          <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/team" | relative_url}}" class="text-white">Bureau</a></li>
+          <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/recycle" | relative_url}}" class="text-white">Recyclerie</a></li>
+          <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/repair" | relative_url}}" class="text-white">Réparation</a></li>
           <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/infos" | relative_url}}" class="text-white">Infos Pratiques</a></li>
         </ul>
       </div>
