Update google tag

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,13 +3,13 @@
 <head>
   {% if jekyll.environment == 'production' %}
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-N0F93FJYBH"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WVGNX43B9N"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-N0F93FJYBH');
+    gtag('config', 'G-WVGNX43B9N');
   </script>
   {% endif %}
   <meta charset="utf-8">
