--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,20 @@
       <div>
         <p class="text-center f5 mt-4 pt-4">&copy; 2025 - {{ site.time | date: '%Y' }} <span>Seconde Nature</span></p>
       </div>
+      <iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/seconde-nature-la-vauzelle/adhesions/adhesion-2025/widget-bouton" style="width: 100%; height: 70px; border: none;"></iframe>
+
+      <a href="mailto:asso.seconde.nature@gmail.com" class="text-center">
+        <span class="sr-only">Email</span>
+        {% octicon inbox height:24 class:"fill-gray-light d-inline" aria-label:github-logo %}
+      </a>
+      <a href="https://www.facebook.com/groups/assosecondenature?locale=fr_FR" class="text-center">
+        <span class="sr-only">Groupe Facebook</span>
+        {% octicon comment-discussion height:24 class:"fill-gray-light d-inline" aria-label:github-logo %}
+      </a>
+      <a href="https://seconde-nature1.odoo.com/" class="text-center">
+        <span class="sr-only">Caisse</span>
+        {% octicon codespaces height:24 class:"fill-gray-light d-inline" aria-label:github-logo %}
+      </a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
