--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,7 @@
         {% octicon codespaces height:24 class:"fill-gray-light d-inline" aria-label:github-logo %}
       </a>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
