Add legals informations

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,22 +1,22 @@
     <footer>
       <div>
-        <p class="text-center f5 mt-4 pt-4">&copy; 2025 - {{ site.time | date: '%Y' }} <span>Seconde Nature</span></p>
+        <p class="text-center f5 mt-4 pt-4">&copy; {{ site.time | date: '%Y' }} <span>Seconde Nature</span></p>
       </div>
       <!-- wait for helloasso
         <iframe id="haWidget" allowtransparency="true" src="https://www.helloasso.com/associations/seconde-nature-la-vauzelle/adhesions/adhesion-2025/widget-bouton" style="width: 100%; height: 70px; border: none;"></iframe> 
        -->
 
-      <a href="mailto:asso.seconde.nature@gmail.com" class="text-center">
+      <a href="mailto:asso.seconde.nature@gmail.com" target="_blank" class="text-center">
         <span class="sr-only">Email</span>
         {% octicon inbox height:24 class:"fill-gray-light d-inline" aria-label:github-logo %}
       </a>
-      <a href="https://www.facebook.com/groups/assosecondenature?locale=fr_FR" class="text-center">
+      <a href="https://www.facebook.com/groups/assosecondenature?locale=fr_FR" target="_blank" class="text-center">
         <span class="sr-only">Groupe Facebook</span>
         {% octicon comment-discussion height:24 class:"fill-gray-light d-inline" aria-label:github-logo %}
       </a>
-      <a href="https://seconde-nature2.odoo.com/" class="text-center">
-        <span class="sr-only">Caisse</span>
-        {% octicon codespaces height:24 class:"fill-gray-light d-inline" aria-label:github-logo %}
+      <a href="https://www.pappers.fr/entreprise/seconde-nature-941702995" target="_blank" class="text-center">
+        <span class="sr-only">Mentions légales</span>
+        {% octicon law height:24 class:"fill-gray-light d-inline" aria-label:github-logo %}
       </a>
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" crossorigin="anonymous"></script>
