Update adhesion et partenaires

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,8 +34,10 @@
         <ul>
           <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/recycle" | relative_url}}" class="text-white">Recyclerie</a></li>
           <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/services" | relative_url}}" class="text-white">Services</a></li>
+          <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/partners" | relative_url}}" class="text-white">Devenir Partenaire</a></li>
           <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/benevole" | relative_url}}" class="text-white">Devenir Benevole</a></li>
           <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/infos" | relative_url}}" class="text-white">Infos Pratiques</a></li>
+          <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/adherents" | relative_url}}" class="text-white"><span class="badge bg-danger">Rejoignez-nous!</span></a></li>
         </ul>
       </div>
     </div>
