Update with pricing, vinted and people

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,10 @@
         <span class="sr-only">Groupe Facebook</span>
         {% octicon comment-discussion height:24 class:"fill-gray-light d-inline" aria-label:github-logo %}
       </a>
+      <a href="https://caa0e864.sibforms.com/serve/MUIFAAkZtm13vqLNVxCBn1ODeEMrbTWnkFlKSKvnvM0ZzvI0Z5LHZJ41t1SsNvJfsrJtU0Uh0_D3wfZDCWdvA5WkbP5HizK52pxCP7WBw2kmWBNGgu9mJfi1R_6zaEVYUs5Wqs0X0y9VeG9w4-ECSAISvQCINiTUGWEP_9x78VLMrF9Tz_m_jfS4e9MS6EyqZfJUAEVnDAJaywIT" target="_blank" class="text-center">
+        <span class="sr-only">Newsletter</span>
+        {% octicon comment-discussion height:24 class:"fill-gray-light d-inline" aria-label:github-logo %}
+      </a>
       <a href="https://www.pappers.fr/entreprise/seconde-nature-941702995" target="_blank" class="text-center">
         <span class="sr-only">Mentions légales</span>
         {% octicon law height:24 class:"fill-gray-light d-inline" aria-label:github-logo %}
