--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,18 +27,62 @@
   <div class="page-header pt-4 pb-5">
     <div class="container-lg">
       <div class="text-center">
-        <a href="{{ "/" | relative_url}}"><img class="logo" src="{{ "/assets/img/seconde_nature_logo.png" | relative_url}}" width="200" 
+        <a href="{{ "/" | relative_url}}"><img class="logo" src="{{ "/assets/img/logo_carre.svg" | relative_url}}" width="200" 
           alt="Seconde Nature"></a>
       </div>
       <div>
-        <ul>
-          <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/recycle" | relative_url}}" class="text-white">Recyclerie</a></li>
-          <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/services" | relative_url}}" class="text-white">Services</a></li>
-          <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/partners" | relative_url}}" class="text-white">Devenir Partenaire</a></li>
-          <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/benevole" | relative_url}}" class="text-white">Devenir Benevole</a></li>
-          <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/infos" | relative_url}}" class="text-white">Infos Pratiques</a></li>
-          <li class="text-center d-block d-sm-inline-block px-1 px-md-3"><a href="{{ "/adherents" | relative_url}}" class="text-white"><span class="badge bg-danger">Rejoignez-nous!</span></a></li>
-        </ul>
+        <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid">
+            <a class="navbar-brand text-white" href="{{ "/" | relative_url}}">Acceuil</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="{{ "/recycle" | relative_url}}">
+                    <span class="badge bg-secondary">Recyclerie</span>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="{{ "/services" | relative_url}}">
+                    <span class="badge bg-secondary">Services</span>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="{{ "/partners" | relative_url}}">
+                    <span class="badge bg-secondary">Partenariats</span>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="{{ "/benevole" | relative_url}}">
+                    <span class="badge bg-secondary">Devenir Bénévole</span>
+                  </a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <span class="badge bg-secondary">Infos Pratiques</span>
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <li><a class="dropdown-item" href="{{ "/infos" | relative_url}}">Horaires</a></li>
+                    <li><a class="dropdown-item" href="{{ "/pricing" | relative_url}}">Politique commerciale</a></li>
+                    <li><a class="dropdown-item" href="{{ "/adherents" | relative_url}}">Adhésions</a></li>
+                    <li><a class="dropdown-item" href="{{ "/faq" | relative_url}}">FAQ</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="https://www.vinted.fr/member/271052251-secondenature17"   target="_blank"><span class="badge bg-danger">Boutique Vinted</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="{{ "/adherents" | relative_url}}"><span class="badge bg-warning">Devenez adhérent</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="{{ "/faq" | relative_url}}"><span class="badge bg-success">Questions fréquentes</span></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
       </div>
     </div>
   </div>
