Add price and collected_items

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -67,6 +67,7 @@
                     <li><a class="dropdown-item" href="{{ "/infos" | relative_url}}">Horaires</a></li>
                     <li><a class="dropdown-item" href="{{ "/pricing" | relative_url}}">Politique commerciale</a></li>
                     <li><a class="dropdown-item" href="{{ "/adherents" | relative_url}}">Adhésions</a></li>
+                    <li><a class="dropdown-item" href="{{ "/collected_items" | relative_url}}">Collecte / Apport</a></li>
                     <li><a class="dropdown-item" href="{{ "/faq" | relative_url}}">FAQ</a></li>
                   </ul>
                 </li>
