--- a/_includes/header.html
+++ b/_includes/header.html
@@ -60,6 +60,15 @@
                   </a>
                 </li>
                 <li class="nav-item dropdown">
+                  <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink1" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <span class="badge bg-info">Projets</span>
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
+                    <li><a class="dropdown-item" href="{{ "/repair_cafe" | relative_url}}">Repair Café</a></li>
+                    <li><a class="dropdown-item" href="{{ "/ia" | relative_url}}">IA</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown">
                   <a class="nav-link text-white dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <span class="badge bg-secondary">Infos Pratiques</span>
                   </a>
