--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
       <div>
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
-            <a class="navbar-brand text-white" href="{{ "/" | relative_url}}">Acceuil</a>
+            <a class="navbar-brand text-white" href="{{ "/" | relative_url}}">Accueil</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
