--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,8 +19,8 @@
   <link rel="stylesheet" type="text/css" href="{{ "/assets/css/style.css" | relative_url }}">
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <!-- LiveChat Odoo -->
-  <script defer="defer" type="text/javascript" src="http://odoo.seconde-nature.net/im_livechat/loader/1"></script>
-  <script defer="defer" type="text/javascript" src="http://odoo.seconde-nature.net/im_livechat/assets_embed.js"></script>
+  <script defer="defer" type="text/javascript" src="https://odoo.seconde-nature.net/im_livechat/loader/3"></script>
+  <script defer="defer" type="text/javascript" src="https://odoo.seconde-nature.net/im_livechat/assets_embed.js"></script>
   <link rel="preload" as="font" href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" crossorigin>
   {% seo %}
 </head>
